# AITutorForLogicAndPhysics

./: .gitattributes  .gitignore  README.md  setup.sh
.boxsync/: stop.sh  (+2 more)
physic_pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-train.txt  requirements.txt
physic_pipeline/baseline/: smoke100logic_solver_only_eval.json  smoke100physics_solver_only_eval.json
physic_pipeline/configs/: default.yaml  eval_qwen_full_llm.yaml  eval_qwen_parse_rewrite.yaml  eval_qwen_parse_rewrite_logic_head.yaml  eval_qwen_rewrite.yaml  eval_solver_only.yaml
physic_pipeline/docs/: EXACT_FAMA_RUN_COMMANDS.md  README_FIXED_BENCHMARKS.md  README_FULL_LLM_FLOW.md  README_PARSER_ONLY.md  SETUP_FULL_PIPELINE.md
physic_pipeline/prompts/: explanation_rewrite.md  router.md  system.md
physic_pipeline/scripts/: analyze_logic_errors.py  analyze_physics_errors.py  app.py  check_environment.py  check_p3_lookup_active.py  check_rewrite_changed.py  evaluate.py  evaluate_explanation_quality.py  evaluate_unit_aware.py  filter_bad_physics_dataset.py  filter_correct_prediction.py  filter_wrong_predictions.py  make_fixed_smoke_benchmarks.py  predict_interactive_CLI.py  predict_one.py  prepare_official_data.py  preprocess_official_data.py  run_inference.py  run_inference_full_llm.py  run_parser_only.py  split_dataset.py  split_wrong_predictions.py  test_scientific_notation_normalization.py
physic_pipeline/tests/: test_api_schema.py  test_logic_solver.py  test_physics_solver.py  test_router.py  test_solver_upgrades.py
(+105 files in other folders)
